@@ -138,7 +138,7 @@ void timeStep ()
 		return;
 
 	// Simulation code
-	for (unsigned int i = 0; i < 4; i++)
+	for (unsigned int i = 0; i < 8; i++)
 		sim.step(model);
 
 	for (unsigned int i = 0; i < model.getTetModels().size(); i++)
